[package]
name = "basic-pool"
authors = ["Marcus Engvall <qasaur@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw-utils = "1.0.1"
cw-storage-plus = "1.0.1"
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.38" }
cw20 = "1.0.1"
lazy_static = "1.4.0"
itertools = "0.10.5"
sylvia = "0.2.1"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"

[dev-dependencies]
cw-multi-test = "0.16.1"
rstest = "0.16.0"